test/Fail/Issue5237.err
Issue5237.agda:20.13-15: error: [SplitError.NotADatatype]
Cannot split on argument of non-datatype I
when checking that the pattern i1 has type I
